9.5/_sources/examples.rst.txt
.. _examples:

========
Examples
========



Getting Started
***************


A very simple *hello world* label
---------------------------------

.. lv_example:: get_started/lv_example_get_started_1


A button with a label and react on click event
----------------------------------------------

.. lv_example:: get_started/lv_example_get_started_2


Create styles from scratch for buttons
--------------------------------------

.. lv_example:: get_started/lv_example_get_started_3


Create a slider and write its value on a label
----------------------------------------------

.. lv_example:: get_started/lv_example_get_started_4



Styles
******


Size styles
-----------

.. lv_example:: styles/lv_example_style_1


Background styles
-----------------

.. lv_example:: styles/lv_example_style_2


Border styles
-------------

.. lv_example:: styles/lv_example_style_3


Outline styles
--------------

.. lv_example:: styles/lv_example_style_4


Shadow styles
-------------

.. lv_example:: styles/lv_example_style_5


Image styles
------------

.. lv_example:: styles/lv_example_style_6


Arc styles
----------

.. lv_example:: styles/lv_example_style_7


Text styles
-----------

.. lv_example:: styles/lv_example_style_8


Line styles
-----------

.. lv_example:: styles/lv_example_style_9


Drop shadow styles
------------------

.. lv_example:: styles/lv_example_style_10


Transition
----------

.. lv_example:: styles/lv_example_style_11


Using multiple styles
---------------------

.. lv_example:: styles/lv_example_style_12


Local styles
------------

.. lv_example:: styles/lv_example_style_13


Add styles to parts and states
------------------------------

.. lv_example:: styles/lv_example_style_14


Extending the current theme
---------------------------

.. lv_example:: styles/lv_example_style_15


Opacity and Transformations
---------------------------

.. lv_example:: styles/lv_example_style_16


Metallic knob with conic gradient
---------------------------------

.. lv_example:: styles/lv_example_style_17


Radial gradient as background
-----------------------------

.. lv_example:: styles/lv_example_style_18


Gradients for button background
-------------------------------

.. lv_example:: styles/lv_example_style_19


Test between recolor style or full background modal
---------------------------------------------------

.. lv_example:: styles/lv_example_style_20


Transform style
---------------

.. lv_example:: styles/lv_example_style_21



Gradients
*********


Simple Horizontal Gradient
--------------------------

.. lv_example:: grad/lv_example_grad_1


Linear (Skew) Gradient
----------------------

.. lv_example:: grad/lv_example_grad_2


Radial Gradient
---------------

.. lv_example:: grad/lv_example_grad_3


Conical Gradient
----------------

.. lv_example:: grad/lv_example_grad_4



Animations
**********


Start animation on an event
---------------------------

.. lv_example:: anim/lv_example_anim_1


Playback animation
------------------

.. lv_example:: anim/lv_example_anim_2


Cubic Bezier animation
----------------------

.. lv_example:: anim/lv_example_anim_3


Pause animation
---------------

.. lv_example:: anim/lv_example_anim_4


Animation timeline
------------------

.. lv_example:: anim/lv_example_anim_timeline_1



Events
******


Button click event
------------------

.. lv_example:: event/lv_example_event_click


Click streaks
-------------

.. lv_example:: event/lv_example_event_streak


Handle multiple events
----------------------

.. lv_example:: event/lv_example_event_button


Event bubbling
--------------

.. lv_example:: event/lv_example_event_bubble


Event trickle-down
------------------

.. lv_example:: event/lv_example_event_trickle


Draw event
----------

.. lv_example:: event/lv_example_event_draw



Layouts
*******


Grid
----

A simple grid
~~~~~~~~~~~~~

.. lv_example:: layouts/grid/lv_example_grid_1

Demonstrate cell placement and span
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: layouts/grid/lv_example_grid_2

Demonstrate grid's -free unit-
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: layouts/grid/lv_example_grid_3

Demonstrate track placement
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: layouts/grid/lv_example_grid_4

Demonstrate column and row gap
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: layouts/grid/lv_example_grid_5

Demonstrate RTL direction on grid
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: layouts/grid/lv_example_grid_6


Flex
----

A simple row and a column layout with flexbox
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: layouts/flex/lv_example_flex_1

Arrange items in rows with wrap and even spacing
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: layouts/flex/lv_example_flex_2

Demonstrate flex grow
~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: layouts/flex/lv_example_flex_3

Demonstrate flex grow
~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: layouts/flex/lv_example_flex_4

Demonstrate column and row gap style properties
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: layouts/flex/lv_example_flex_5

RTL base direction changes order of the items
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: layouts/flex/lv_example_flex_6



Scrolling
*********


Nested scrolling
----------------

.. lv_example:: scroll/lv_example_scroll_1


Snapping
--------

.. lv_example:: scroll/lv_example_scroll_2


Floating button
---------------

.. lv_example:: scroll/lv_example_scroll_3


Styling the scrollbars
----------------------

.. lv_example:: scroll/lv_example_scroll_4


Right to left scrolling
-----------------------

.. lv_example:: scroll/lv_example_scroll_5


Translate on scroll
-------------------

.. lv_example:: scroll/lv_example_scroll_6


Infinite scrolling
------------------

.. lv_example:: scroll/lv_example_scroll_7


Circular scrolling
------------------

.. lv_example:: scroll/lv_example_scroll_8


Scrolling Properties
--------------------

.. lv_example:: scroll/lv_example_scroll_9



Widgets
*******


Base Widget
-----------

Base objects with custom styles
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/obj/lv_example_obj_1

Make an object draggable
~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/obj/lv_example_obj_2

Transform object using a 3x3 matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/obj/lv_example_obj_3


Animation Image
---------------

Simple Animation Image
~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/animimg/lv_example_animimg_1


Arc
---

Simple Arc
~~~~~~~~~~

.. lv_example:: widgets/arc/lv_example_arc_1

Loader with Arc
~~~~~~~~~~~~~~~

.. lv_example:: widgets/arc/lv_example_arc_2

Pie Chart with clickable slices using Arcs
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/arc/lv_example_arc_3


Arc Label
---------

Simple Arc Label
~~~~~~~~~~~~~~~~

.. lv_example:: widgets/arclabel/lv_example_arclabel_1


Bar
---

Simple Bar
~~~~~~~~~~

.. lv_example:: widgets/bar/lv_example_bar_1

Styling a bar
~~~~~~~~~~~~~

.. lv_example:: widgets/bar/lv_example_bar_2

Temperature meter
~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/bar/lv_example_bar_3

Stripe pattern and range value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/bar/lv_example_bar_4

Bar with LTR and RTL base direction
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/bar/lv_example_bar_5

Custom drawer to show the current value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/bar/lv_example_bar_6

Bar with opposite direction
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/bar/lv_example_bar_7


Button
------

Simple Buttons
~~~~~~~~~~~~~~

.. lv_example:: widgets/button/lv_example_button_1

Styling buttons
~~~~~~~~~~~~~~~

.. lv_example:: widgets/button/lv_example_button_2

Gummy button
~~~~~~~~~~~~

.. lv_example:: widgets/button/lv_example_button_3


Button Matrix
-------------

Simple Button matrix
~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/buttonmatrix/lv_example_buttonmatrix_1

Custom buttons
~~~~~~~~~~~~~~

.. lv_example:: widgets/buttonmatrix/lv_example_buttonmatrix_2

Pagination
~~~~~~~~~~

.. lv_example:: widgets/buttonmatrix/lv_example_buttonmatrix_3


Calendar
--------

Calendar with header
~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/calendar/lv_example_calendar_1

Chinese calendar
~~~~~~~~~~~~~~~~

.. lv_example:: widgets/calendar/lv_example_calendar_2


Canvas
------

Drawing on the Canvas and rotate
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/canvas/lv_example_canvas_1

Transparent Canvas with chroma keying
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/canvas/lv_example_canvas_2

Draw a rectangle to the canvas
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/canvas/lv_example_canvas_3

Draw a label to the canvas
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/canvas/lv_example_canvas_4

Draw an arc to the canvas
~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/canvas/lv_example_canvas_5

Draw an image to the canvas
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/canvas/lv_example_canvas_6

Draw a line to the canvas
~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/canvas/lv_example_canvas_7

Draw a vector graphic to the canvas
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/canvas/lv_example_canvas_8

Draw a triangle to the canvas
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/canvas/lv_example_canvas_9

Blur an area on the canvas
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/canvas/lv_example_canvas_10

Draw Fancy Letter Effects
~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/canvas/lv_example_canvas_11

Draw Fancy Letter Effects 2
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/canvas/lv_example_canvas_12


Chart
-----

Line Chart
~~~~~~~~~~

.. lv_example:: widgets/chart/lv_example_chart_1

Axis ticks and labels with scrolling
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/chart/lv_example_chart_2

Show the value of the pressed points
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/chart/lv_example_chart_3

Recolor bars based on their value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/chart/lv_example_chart_4

Faded area line chart with custom division lines
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/chart/lv_example_chart_5

Show cursor on the clicked point
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/chart/lv_example_chart_6

Scatter chart
~~~~~~~~~~~~~

.. lv_example:: widgets/chart/lv_example_chart_7

Circular line chart with gap
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/chart/lv_example_chart_8


Checkbox
--------

Simple Checkboxes
~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/checkbox/lv_example_checkbox_1

Checkboxes as radio buttons
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/checkbox/lv_example_checkbox_2


Dropdown
--------

Simple Drop down list
~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/dropdown/lv_example_dropdown_1

Drop down in four directions
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/dropdown/lv_example_dropdown_2

Menu
~~~~

.. lv_example:: widgets/dropdown/lv_example_dropdown_3


Image
-----

Image from variable and symbol
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/image/lv_example_image_1

Image recoloring
~~~~~~~~~~~~~~~~

.. lv_example:: widgets/image/lv_example_image_2

Rotate and zoom
~~~~~~~~~~~~~~~

.. lv_example:: widgets/image/lv_example_image_3

Image offset and styling
~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/image/lv_example_image_4


Image Button
------------

Simple Image button
~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/imagebutton/lv_example_imagebutton_1


Keyboard
--------

Keyboard with text area
~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/keyboard/lv_example_keyboard_1

Keyboard with custom map
~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/keyboard/lv_example_keyboard_2

Keyboard with drawing
~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/keyboard/lv_example_keyboard_3


Label
-----

Line wrap, recoloring and scrolling
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/label/lv_example_label_1

Text shadow
~~~~~~~~~~~

.. lv_example:: widgets/label/lv_example_label_2

Show LTR, RTL and Chinese texts
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/label/lv_example_label_3

Draw label with gradient color
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/label/lv_example_label_4

Customize circular scrolling animation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/label/lv_example_label_5

Monospace font
~~~~~~~~~~~~~~

.. lv_example:: widgets/label/lv_example_label_6

Assign a translation tag to a label
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/label/lv_example_label_7


LED
---

LED with custom style
~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/led/lv_example_led_1


Line
----

Simple Line
~~~~~~~~~~~

.. lv_example:: widgets/line/lv_example_line_1


List
----

Simple List
~~~~~~~~~~~

.. lv_example:: widgets/list/lv_example_list_1

Sorting a List using up and down buttons
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/list/lv_example_list_2


Lottie
------

Load a Lottie animation from an array
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/lottie/lv_example_lottie_1

Load a Lottie animation from file
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/lottie/lv_example_lottie_2


Menu
----

Simple Menu
~~~~~~~~~~~

.. lv_example:: widgets/menu/lv_example_menu_1

Simple Menu with root btn
~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/menu/lv_example_menu_2

Simple Menu with custom header
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/menu/lv_example_menu_3

Simple Menu with floating btn to add new menu page
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/menu/lv_example_menu_4

Complex Menu
~~~~~~~~~~~~

.. lv_example:: widgets/menu/lv_example_menu_5


Message Box
-----------

Simple Message box
~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/msgbox/lv_example_msgbox_1

Scrolling and styled Message box
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/msgbox/lv_example_msgbox_2

Message box with blurred background
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/msgbox/lv_example_msgbox_3


Roller
------

Simple Roller
~~~~~~~~~~~~~

.. lv_example:: widgets/roller/lv_example_roller_1

Styling the roller
~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/roller/lv_example_roller_2

add fade mask to roller
~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/roller/lv_example_roller_3


Scale
-----

A simple horizontal scale
~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/scale/lv_example_scale_1

An vertical scale with section and custom styling
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/scale/lv_example_scale_2

A simple round scale
~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/scale/lv_example_scale_3

A round scale with section and custom styling
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/scale/lv_example_scale_4

A scale with section and custom styling
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/scale/lv_example_scale_5

A round scale with multiple needles, resembling a clock
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/scale/lv_example_scale_6

Customizing scale major tick label color with `LV_EVENT_DRAW_TASK_ADDED` event
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/scale/lv_example_scale_7

A round scale with labels rotated and translated
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/scale/lv_example_scale_8

A horizontal scale with labels rotated and translated
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/scale/lv_example_scale_9

A round scale style simulating a Heart Rate monitor
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/scale/lv_example_scale_10

A round scale style simulating a sunset/sunrise widget
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/scale/lv_example_scale_11

A round scale style simulating a compass
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/scale/lv_example_scale_12

Axis ticks and labels with scrolling on a chart
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/chart/lv_example_chart_2


Slider
------

Simple Slider
~~~~~~~~~~~~~

.. lv_example:: widgets/slider/lv_example_slider_1

Slider with custom style
~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/slider/lv_example_slider_2

Slider with extended drawer
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/slider/lv_example_slider_3

Slider with opposite direction
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/slider/lv_example_slider_4


Span
----

Span with custom styles
~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/span/lv_example_span_1


Spinbox
-------

Simple Spinbox
~~~~~~~~~~~~~~

.. lv_example:: widgets/spinbox/lv_example_spinbox_1


Spinner
-------

Simple spinner
~~~~~~~~~~~~~~

.. lv_example:: widgets/spinner/lv_example_spinner_1


Switch
------

Simple Switch
~~~~~~~~~~~~~

.. lv_example:: widgets/switch/lv_example_switch_1

Switch Orientation
~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/switch/lv_example_switch_2


Table
-----

Simple table
~~~~~~~~~~~~

.. lv_example:: widgets/table/lv_example_table_1

Lightweighted list from table
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/table/lv_example_table_2


Tabview
-------

Simple Tabview
~~~~~~~~~~~~~~

.. lv_example:: widgets/tabview/lv_example_tabview_1

Tabs on the left, styling and no scrolling
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/tabview/lv_example_tabview_2


Textarea
--------

Simple Text area
~~~~~~~~~~~~~~~~

.. lv_example:: widgets/textarea/lv_example_textarea_1

Text area with password field
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/textarea/lv_example_textarea_2

Text auto-formatting
~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/textarea/lv_example_textarea_3

Text area cursor styling
~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/textarea/lv_example_textarea_4


Tileview
--------

Tileview with content
~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: widgets/tileview/lv_example_tileview_1


Window
------

Simple window
~~~~~~~~~~~~~

.. lv_example:: widgets/win/lv_example_win_1



3rd-Party Libraries
*******************


libjpeg-turbo
-------------

Load a JPG image
~~~~~~~~~~~~~~~~

.. lv_example:: libs/libjpeg_turbo/lv_example_libjpeg_turbo_1


libpng
------

Open a PNG image from file and variable
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/libpng/lv_example_libpng_1


FFmpeg
------

Decode image
~~~~~~~~~~~~

.. lv_example:: libs/ffmpeg/lv_example_ffmpeg_1

Decode video
~~~~~~~~~~~~

.. lv_example:: libs/ffmpeg/lv_example_ffmpeg_2


Tiny TTF
--------

Open a font with Tiny TTF from data array
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/tiny_ttf/lv_example_tiny_ttf_1

Load a font with Tiny_TTF from file
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/tiny_ttf/lv_example_tiny_ttf_2

Change font size with Tiny_TTF
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/tiny_ttf/lv_example_tiny_ttf_3


GIF
---

Open a GIF image from file and variable
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/gif/lv_example_gif_1


SVG
---

Load and render SVG data
~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/svg/lv_example_svg_1

Load and render SVG data from a file
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/svg/lv_example_svg_2

Load and render SVG data in a draw event
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/svg/lv_example_svg_3


LodePNG
-------

Open a PNG image from file and variable
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/lodepng/lv_example_lodepng_1


FreeType
--------

Create a font with FreeType
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/freetype/lv_example_freetype_1

Use a bitmap font to draw Emojis using FreeType
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/freetype/lv_example_freetype_2

Freetype font kerning
~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/freetype/lv_example_freetype_3


LibWebP
-------

Open a WEBP image from file and variable
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/libwebp/lv_example_libwebp_1


QR-Code Generator
-----------------

Create a QR Code
~~~~~~~~~~~~~~~~

.. lv_example:: libs/qrcode/lv_example_qrcode_1


Tiny JPEG Decompressor (TJpgDec)
--------------------------------

Load a JPG image
~~~~~~~~~~~~~~~~

.. lv_example:: libs/tjpgd/lv_example_tjpgd_1


rlottie
-------

Load a Lottie animation from raw data
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/rlottie/lv_example_rlottie_1

Load a Lottie animation from a file
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/rlottie/lv_example_rlottie_2


BMP
---

Open a BMP image from file
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/bmp/lv_example_bmp_1


glTF
----

Open a glTF from a file and make it spin forever like a platter
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/gltf/lv_example_gltf_1

Open a glTF from a file and iterate through each camera
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/gltf/lv_example_gltf_2

Load multiple models in a single glTF object and modify their position, rotation and scale at runtime
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/gltf/lv_example_gltf_3


Barcode
-------

Create a Barcode
~~~~~~~~~~~~~~~~

.. lv_example:: libs/barcode/lv_example_barcode_1


GStreamer
---------

Loads a video from the internet using the gstreamer widget
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: libs/gstreamer/lv_example_gstreamer_1



Others
******


Font Manager
------------

Create FreeType Font
~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/font_manager/lv_example_font_manager_1

Create Font Family
~~~~~~~~~~~~~~~~~~

.. lv_example:: others/font_manager/lv_example_font_manager_2

Create Custom Image Font
~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/font_manager/lv_example_font_manager_3


Grid Navigation
---------------

Basic grid navigation
~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/gridnav/lv_example_gridnav_1

Grid navigation on a list
~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/gridnav/lv_example_gridnav_2

Nested grid navigations
~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/gridnav/lv_example_gridnav_3

Simple navigation on a list widget
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/gridnav/lv_example_gridnav_4

Grid navigation for only one axis
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/gridnav/lv_example_gridnav_5


Snapshot
--------

Simple snapshot example
~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/snapshot/lv_example_snapshot_1


Observer
--------

Bind a slider's value to a label
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/observer/lv_example_observer_1

Handling login and its states
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/observer/lv_example_observer_2

Set time with 12/24 mode and AM/PM
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/observer/lv_example_observer_3

Custom tab view with state management
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/observer/lv_example_observer_4

Firmware update process
~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/observer/lv_example_observer_5

Modular style update on theme change
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/observer/lv_example_observer_6


Fragment Manager
----------------

Basic fragment usage
~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/fragment/lv_example_fragment_1

Stack navigation example
~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/fragment/lv_example_fragment_2


Pinyin IME
----------

Pinyin IME 26 key input
~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/ime/lv_example_ime_pinyin_1

Pinyin IME 9 key input
~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/ime/lv_example_ime_pinyin_2


File Explorer
-------------

Simple File Explorer
~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/file_explorer/lv_example_file_explorer_1

Control File Explorer
~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/file_explorer/lv_example_file_explorer_2

Custom sort
~~~~~~~~~~~

.. lv_example:: others/file_explorer/lv_example_file_explorer_3


Monkey
------

Touchpad monkey example
~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/monkey/lv_example_monkey_1

Encoder monkey example
~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/monkey/lv_example_monkey_2

Button monkey example
~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/monkey/lv_example_monkey_3


Translation
-----------

Simple translation example
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/translation/lv_example_translation_1

Dynamic language selection
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/translation/lv_example_translation_2


Image Font
----------

Use emojis in a text.
~~~~~~~~~~~~~~~~~~~~~

.. lv_example:: others/imgfont/lv_example_imgfont_1


Gestures
--------



Porting
*******


OS Abstraction Layer (OSAL)
---------------------------

Basic Example
~~~~~~~~~~~~~

.. lv_example:: porting/osal/lv_example_osal

